--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A microservice to handle reviews for the Atelier Frontend",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "nodemon ./index.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/OmnitrixSDC/FourArms-Reviews#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -26,7 +28,6 @@
     "pg": "^8.7.3",
     "postgres": "^3.2.4"
   },
-
   "devDependencies": {
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
