--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.19",
     "pg": "^8.7.3",
-    "postgres": "^3.2.4"
+    "postgres": "^3.2.4",
+    "underscore": "^1.13.4"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
