Move db file, update example env  Please enter the commit message for your changes. Lines starting

--- a/example.env
+++ b/example.env
@@ -1,5 +1,6 @@
-SERVER_PORT="45348"
+SERVER_PORT="42000"
 DB_USERNAME="postgres"
 DB_PASSWORD="postgres"
-DB_PORT="5432"
-DB_HOST="hostname"
+DB_PORT="5555"
+DB_HOST="atomsmasher"
+DB_NAME="reviews"
